--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "file-saver": "^2.0.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
+        "react-bootstrap": "^2.10.5",
         "react-csv": "^2.2.2",
         "react-dom": "^18.3.1",
         "react-flow-renderer": "^10.3.17",
