--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@dabeng/react-orgchart": "^1.0.3",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
         "chart.js": "^4.4.5",
+        "d3": "^7.9.0",
         "file-saver": "^2.0.5",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
+        "react-chartjs-2": "^5.2.0",
         "react-csv": "^2.2.2",
         "react-dom": "^18.3.1",
         "react-flow-renderer": "^10.3.17",
-        "react-router-dom": "^6.27.0"
+        "react-orgchart": "^1.0.5",
+        "react-router-dom": "^6.27.0",
+        "vis-network": "^9.1.9"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
